--- a/pelis/mkdocs.yml
+++ b/pelis/mkdocs.yml
@@ -1,1 +1,11 @@
-site_name: My Docs
+site_name: Peliculas
+
+theme:
+ name: readthedocs
+
+
+extra:
+
+ social:
+
+copyright: Copyright &copy; 2021 - 2022 Mohamed Wafik
